# CouchPotatoServer

./: .dockerignore  .gitignore  CouchPotato.py  Dockerfile  README.md  audit_actions.jsonl  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_migration.py
.github/: contributing.md
.github/workflows/: docker.yml  test.yml
couchpotato/: api.py  environment.py  environment_test.py  runner.py
couchpotato/core/: database.py  db.py  event.py  loader.py  logger.py  settings.py  settings_test.py  softchroot.py  softchroot_test.py
couchpotato/core/_base/: _core.py  scheduler.py
couchpotato/core/_base/downloader/: main.py
couchpotato/core/_base/updater/: main.py
couchpotato/core/downloaders/: deluge.py  hadouken.py  nzbget.py  qbittorrent_.py  rtorrent_.py  sabnzbd.py  synology.py  transmission.py  utorrent.py
couchpotato/core/downloaders/putio/: main.py
couchpotato/core/helpers/: encoding.py  request.py  variable.py
couchpotato/core/media/: __init__.py
couchpotato/core/migration/: __init__.py  marshal_reader.py  migrate.py
couchpotato/core/notifications/: __init__.py  apprise_notify.py  base.py  discord.py  emby.py  growl.py  homey.py  nmj.py  plex.py  script.py  trakt.py  xbmc.py
couchpotato/core/plugins/: audit.py  automation.py  base.py  browser.py  browser_test.py  dashboard.py  file.py  manage.py  renamer.py  scanner.py  subtitle.py
couchpotato/static/scripts/: combined.base.min.js  combined.plugins.min.js  couchpotato.js
couchpotato/static/style/: combined.min.css  main.scss  settings.scss
couchpotato/templates/: index.html
e2e/: conftest.py  test_smoke.py
init/: solaris11
libs/: multipartpost.py
libs/axl/: axel.py
libs/bencode/: __init__.py
libs/cache/: __init__.py  posixemulation.py
libs/caper/parsers/: scene.py
libs/enzyme/: __init__.py  asf.py  core.py  flv.py  fourcc.py  language.py  mkv.py  mp4.py  mpeg.py  ogm.py  real.py  riff.py  strutils.py
libs/git/: commit.py  repository.py  utils.py
libs/gntp/: core.py
libs/guessit/: language.py  textutils.py
libs/pio/: api.py
libs/pytwitter/: __init__.py
libs/rtorrent/: __init__.py  common.py  connection.py
libs/rtorrent/lib/: bencode.py  torrentparser.py
libs/rtorrent/rpc/: __init__.py
libs/subliminal/: __init__.py  async_pool.py  language.py
libs/unrar2/: __init__.py  unix.py
libs/xmpp/: __init__.py  auth.py  browser.py  client.py  commands.py  debug.py  dispatcher.py  features.py  filetransfer.py  jep0106.py  protocol.py  roster.py  session.py  simplexml.py  transports.py
tests/: conftest.py  test_apprise_provider.py  test_audit.py  test_automation.py  test_db_helpers.py  test_emby.py  test_encoding.py  test_kodi.py  test_loader.py  test_log_parser.py  test_multi_instance.py  test_notification_migration.py  test_phase2_vendored.py  test_phase3_5_vendored.py  test_plex.py  test_renamer.py  test_scanner.py  test_variable.py  test_vendored_cleanup.py
(+81 files in other folders)
