[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "CouchPotatoServer"
version = "3.0.0"
description = "Automatic movie downloading via NZB and torrents"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"

dependencies = [
    "tinydb>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
couchpotato = "couchpotato:main"

[tool.setuptools]
packages = ["couchpotato"]

[tool.pytest.ini_options]
testpaths = ["tests"]
