[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "CouchPotatoServer"
version = "3.0.0"
description = "Automatic movie downloading via NZB and torrents"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"

dependencies = [
    "tinydb>=4.8",
    "requests>=2.31",
    "tornado>=6.4",
    "chardet>=5.0",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
    "apscheduler>=3.10,<4",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
couchpotato = "couchpotato:main"

[tool.setuptools]
packages = ["couchpotato"]

[tool.pytest.ini_options]
testpaths = ["tests"]
