[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "CouchPotatoServer"
version = "3.0.0"
description = "Automatic movie downloading via NZB and torrents"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"

dependencies = [
    "tinydb>=4.8",
    "requests>=2.31",
    "tornado>=6.4",
    "chardet>=5.0",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
    "apscheduler>=3.10,<4",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.scripts]
couchpotato = "couchpotato:main"

[tool.setuptools]
packages = ["couchpotato"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",   # multiple statements on one line — original author's style
    "E741",   # ambiguous variable names (l, O, I) — too many, low risk
    "E501",   # line too long — not enforcing in legacy codebase
    "W191",   # tab indentation — a few legacy files use tabs, not worth converting
    "E731",   # lambda assignment — some are closures in loops, risky to convert
    "F841",   # unused variables — often intentional (except SomeError as e: pass)
]

[tool.ruff.lint.per-file-ignores]
"couchpotato/core/softchroot_test.py" = ["F811"]  # legacy test has duplicate method names
